--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,5 @@ board = d1_mini_pro
 monitor_speed = 115200
 framework = arduino
 lib_deps = 
-    adafruit/Adafruit VS1053 Library @ ^1.2.1
+    dfrobot/DFRobotDFPlayerMini @ ^1.0.5
     fastled/FastLED @ ^3.5.0
