--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif8266
 board = d1_mini_pro
 monitor_speed = 115200
+monitor_filters = esp8266_exception_decoder, default
+build_type = debug
 framework = arduino
 lib_deps = 
     dfrobot/DFRobotDFPlayerMini @ ^1.0.5
-    fastled/FastLED @ ^3.5.0
+    adafruit/Adafruit NeoPixel @ ^1.10.6
